# cleak

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  .gitmodules  .orchestra-skills.json  ARCHITECTURE.md  CLAUDE.md  LICENSE  PLAN.md  README.md  THESIS_IMPLEMENTATION_TODO.md  THESIS_WORKSPACE_OVERVIEW.md  docker-compose.thesis-demo.yml  docker-compose.yml  nest-cli.json  package.json  pyproject.toml  research-plan.md  tsconfig.base.json  turbo.json
.changeset/: config.json
demo/: juliet_cwe401.lock.json  lamed.lock.json  memory_leak_corpus.lock.json  real_projects.lock.json
diagrams/: architecture.drawio
docs/: ABLATION-PLAN.md  ARCHITECTURE.md  BASELINE-COMPARISON.md  BASELINE_PROPOSED.md  CONTRIBUTION.md  DATASETS.md  EVALUATION.md  GLOSSARY.md  GOAL.md  OPERATIONS.md  PROMPTS-COMPACT.md  PROMPTS.md  README.md  RELATED-WORK.md  SECURITY.md  SYSTEM-DIAGRAM.md  THESIS.md  sequence-diagrams.md
paper/: HUMANIZER-GUIDELINES.md  OUTLINE.md  de-cuong.md  scaffold.md
proto/: dynamic-analyzer.proto  static-analyzer.proto
researchs/: 01-bao-cao-tong-hop.md  02-bang-so-sanh-baselines.md  03-benchmarks-datasets.md  04-nguon-va-kiem-chung.md  05-baseline-kien-truc.md  README.md
scripts/: agent-loop-smoke.ts  assert-determinism.ts  compare-baselines.ts  compare-modes.ts  compare-results.ts  consensus-ablation.sh  determinism-gate.sh  dynamic-events-test.ts  evaluate-corpus.ts  local-model-smoke.ts  mcnemar-compare.ts  mcp-contract-test.ts  metrics-test.ts  pause-resume-test.ts  run-baselines.ts  run-local-scan-smoke.ts  run_memory_leak_app.sh  steering-test.ts  (+7 more)
(+524 files in other folders)
