[project]
name = "thesis-workspace"
version = "0.1.0"
description = "Workspace root for the thesis orchestration, static analysis, and dynamic analysis repositories."
readme = "THESIS_WORKSPACE_OVERVIEW.md"
requires-python = ">=3.11"
dependencies = []

[tool.thesis]
workspace_repos = [
  "MCP-Vul",
  "leak_guard_tool",
  "mcp-dynamic-analysis-server",
  "mcp-memory-common",
  "mcp-memory-static-analysis-server",
]

[tool.thesis.notes]
purpose = "Root metadata for the multi-repository thesis workspace."
